readme setup project and display todos

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         <li>
           <span class="todo done"></span>
           <p>text</p>
-          <button>Edit</button>
-          <button>Delete</button>
+          <button>Edit template</button> <!-- added "template" text to observe li replacement by js -->
+          <button>Delete template</button>
         </li>
       </ul>
     </div>
